<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pic_Trip</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    
    <string name="form_desc">Créer un nouveau voyage</string>
    <string name="form_trip_title">Titre du voyage</string>
    <string name="form_trip_start_date">Date de début</string>
    <string name="form_trip_end_date">Date de fin</string>
    <string name="form_trip_desc">Description</string>
    <string name="form_button">Créer</string>
    
    <string name="edit_button">Editer</string>
    <string name="presentation_button">Présenter</string>
    
    <string name="options_title">Options</string>
    <string name="options_checkbox">Tracking GPS</string>
    <string name="options_text">Fréquence du tracking</string>
    <string name="options_tracking">20</string>
    <string name="options_tracking_unity">seconde(s)</string>
    <string name="options_button">Enregistrer</string>
    
    <string name="gallery_start_date">Date de début</string>
    <string name="gallery_end_date">Date de fin</string>
    <string name="gallery_button_show">Rechercher</string>
    <string name="gallery_button_hide">Cacher</string>
    
    <string name="grid_button_1">Editer</string>
    <string name="grid_button_2">Journal</string>
    <string name="grid_button_3">Voyage</string>
    <string name="grid_button_4">Exploration</string>

</resources>